Catch leaked cursors in WiredTigerSessionCache

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Engines, Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • v8.2, v8.0
    • Sleepysaurus - 2025-10-14, DawgsInNY- 2025-10-28
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Right now if we allocate and release a cursor from a "stale" session – one with a non-current epoch, WiredTigerSession::releaseCursor() will notice it and simply drop the cursor on the floor. This can result in an undetected leak as in SERVER-110832. We should probably catch this; if there is no circumstance aside from shutdown we should be using a "stale" session we should assert here. Or at least when we create a new cursor from a "stale" session.

            Assignee:
            Ruby Chen
            Reporter:
            Matthew Russotto (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: