SERVER-110834 Catch leaked cursors in WiredTigerSessionCache (#42727)

GitOrigin-RevId: 53ec90306c7d5d39fe67be58b0089618fd842c01